# tiny

./: Cargo.toml  README.md
examples/: tui.rs
src/: agent.rs  backend.rs  compact.rs  config.rs  html.rs  lib.rs  main.rs  message.rs  openai.rs  permission.rs  provider.rs  session.rs  tool.rs  tools.rs  toolset.rs  tui.rs  web.rs  web_fetch.rs  web_search.rs
src/toolset/: fs.rs  shell.rs  web.rs
src/tui/: app.rs  commands.rs  events.rs  frame.rs  input.rs  keys.rs  line.rs  modal.rs  palette.rs  permission.rs  picker.rs  print.rs  prompt.rs  prompt_input.rs  reader.rs  render.rs  run.rs  runtime.rs  scroll.rs  state.rs  status.rs  surface.rs  theme.rs  transcript.rs  view.rs
src/tui/view/: input.rs  intro.rs  palette.rs  picker.rs  status.rs
