[package]
name = "tiny"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal, readable agent framework in Rust"

[lib]
name = "tiny"
path = "src/lib.rs"

[[bin]]
name = "tiny"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
ignore = "0.4"
globset = "0.4"
